--- a/keyboard-puns/Cargo.toml
+++ b/keyboard-puns/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["Andrew Marshall <andrew@johnandrewmarshall.com>"]
 edition = "2018"
 
 [dependencies]
+crossbeam = "0.7.1"
+num_cpus = "1.0"
+
+[profile.release]
+debug = true
